岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(328～)</h4>
-<ol reversed start="330">
+<ol reversed start="331">
+
+<li> 
+Atsushi Machida, Takeshi Watanabe, Masaichiro Mizumaki, Kenji Nagata and Masato Okada<br>
+"Development of a Bayesian inference method for the analysis of X-ray reflectivity data"<br>
+Japanese Journal of Applied Physics 63(1) 017005(2024)
+</li>
 
 <li> 
 Tomohiro Nabika, Kenji Nagata, Masaichiro Mizumaki, Shun Katakami & Masato Okada<br>
