shiehさんのページを変更

--- a/shieh/index.html
+++ b/shieh/index.html
@@ -1,5 +1,49 @@
-<html>
-<body>
-工事中!!!!!
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Shieh Binsheu</title>
+</head>
+
+<body class="vsc-initialized">
+  <h2>謝 濱煦 (Shieh Binsheu)</h2>  
+  <br>
+  Last updated: April 8, 2024
+  <br>
+  <hr>
+  <ul>
+    <li>所属</li>
+    <ul>
+      <li>東京大学大学院 新領域創成科学研究科 複雑理工学専攻 岡田研究室</li>
+    </ul>
+    <li>連絡先</li>
+    <ul>
+      <li>所在地 : 〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</li>  
+      <li>部屋 : 柏の葉キャンパス基盤棟　7A8</li>
+      <li>E-mail : shieh[at]mns.k.u-tokyo.ac.jp</li>
+    </ul>
+  </ul>
+  <hr>
+  <ul> 
+    <li>プロフィール</li>
+    2019.4 同志社大学 文化情報学部文化情報学科 入学<br>
+    2023.3 同志社大学 文化情報学部文化情報学科 卒業<br>
+    2023.4 東京大学大学院 新領域創成科学研究科 複雑理工学専攻 入学<br>
+ </ul>  
+ <hr>
+ <ul>
+    <li>英文学術論文</li>
+    <ol>
+    </ol>
+    <li>国際学会</li>
+    <ol reversed="">
+    </ol>
+    <li>国内学会・シンポジウム</li>
+    2023.10 第26回情報論的学習理論ワークショップ 一般発表
+    
+ </ul>
+  <br>
+  <br>
+  <br>
+  <a href="../index.html">研究室ホームページTOP</a>
 </body>
 </html>
