--- a/lab.html
+++ b/lab.html
@@ -78,6 +78,10 @@
 			
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
+2024/4/10 「<a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2.html?ptype=seminar&pid=21987"target="_blank" rel="noopener noreferrer">物性研中性子セミナー・機能物性セミナー</a>」<br>
+林悠偉　「<a href="pdf/2024_issp_hayashi.pdf">⼩⾓散乱データに基づく試料パラメータとモデルのベイズ推論</a>」
+<p> 
+
 2023/9/1 「<a href="https://www.pasums.issp.u-tokyo.ac.jp/teams/news/1741"target="_blank" rel="noopener noreferrer">物性研理論セミナー</a>」<br>
 片上舜　「<a href="pdf/20230901_katakami.pdf">分散関係計測データに対するベイズパラメータ推定</a>」
 <p> 
