--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -8,8 +8,8 @@
   <body>
 	<h2>林　悠偉 (Yui Hayashi)</h2>  
 	<br>
-	Last updated: 6/5/2023 
-	<li>個人のページは<a href="http://www.yuihayashi.com/">こちら</a>
+	Last updated: 4/11/2024 
+	<li><strong>個人のページは<a href="http://www.yuihayashi.com/">こちら</strong></a>
 </li>
 	<br>
 	<hr>
@@ -28,44 +28,46 @@
 	<hr>
 	  <li>プロフィール</li>
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
-	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
+	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　修士課程 入学<br>
+	  2024.3 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　修士課程 卒業<br>
+	  2024.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　博士課程 入学<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
-	<h2>Published Papers</h2>
-	<ul>
-	<li class="fs11">
-	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
-	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
-	    arXiv:2303.04983, J. Phys. Soc. Jpn., in press., 2023.
-	</li>
-	</ul>
-	
-	<h2>Invited Lectures</h2>
-	<ul>
-	<li class="fs11">
-	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
-	    <i>"Bayesian Estimation of Sample Parameters Using Small-Angle Scattering Measurement Data"</i>,
-	    Presented at the 88th SPring-8 Advanced Technology Workshop / The 4th Data-Driven Science for Advanced Data Analysis: Bayesian Measurement,
-	    SACLA Experimental Research Building Conference Room, Hybrid Web Event, 2023.
-	</li>
-	</ul>
-	<h2>Conference/Symposium Presentations</h2>
-	<ul>
-	<li class="fs11">
-	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
-	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
-	    Information-Based Induction Sciences and Machine Learning (IBIS2022),
-	    TSUKUBA International Congress Center, 2-010, November 2022.
-	</li>
-    <br>
-	<li class="fs11">
-	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
-	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
-	    The Physical Society of Japan 2023 Spring Meeting,
-	    Session 24aL3-12,
-	    Online Event, March 2023.
-	</li>
-	</ul>
-	<ul> 
+</li>
+    </ul>
+    <h2>学術論文</h2>
+    <ul>
+        <li class="fs11">
+            <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+            <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
+            J. Phys. Soc. Jpn. 92, 094002 (2023), https://arxiv.org/abs/2303.04983.
+        </li>
+    </ul>
+    <ul>
+        <li class="fs11">
+            <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+            <i>"Quantitative Selection of Sample Structures in Small-Angle Scattering Using Bayesian Methods"</i>,
+            submitted to Journal of Applied Crystallography (2024), https://arxiv.org/abs/2401.10466.
+        </li>
+    </ul>
+
+<h2>招待講演</h2>
+<ul>
+    <li><strong>林悠偉</strong>, 『小角散乱測定データを使用した試料パラメータのベイズ推定』, 第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」, SACLA実験研究棟会議室及び Webハイブリッドウェブイベント, 2023年3月.</li>
+    <li><strong>林悠偉</strong>, 『小角散乱データに基づく試料パラメータとモデルのベイズ推論』, 東京大学物性研究所 中性子セミナー, 機能物性セミナー, 東京大学物性研究所６階大講義室及びWeb ハイブリッドウェブイベント, 2024年4月.</li>
+</ul>
+
+<h2>会議/シンポジウム発表</h2>
+<ul>
+    <li><strong>林悠偉</strong>, 片上舜, 桑本滋生, 永田賢二, 水牧仁一朗, 岡田真人, 『小角散乱データのベイズ推論』, 第25回情報論的学習理論ワークショップ(IBIS2022), つくば国際会議場 2-010, 2022年11月.</li>
+    <li><strong>林悠偉</strong>, 片上舜, 桑本滋生, 永田賢二, 水牧仁一朗, 岡田真人, 『小角散乱データのベイズ推論』, 日本物理学会2023年春季大会, 24aL3-12, オンラインイベント, 2023年3月.</li>
+    <li><strong>林悠偉</strong>, 片上舜, 桑本滋生, 永田賢二, 水牧仁一朗, 岡田真人, 『ベイズ的アプローチによる小角散乱実験における試料構造の選択』, 日本物理学会第78回年次大会, 東北大学, 2023年9月.</li>
+</ul>
+
+<h2>受賞</h2>
+<ul>
+    <li>塩谷佳介, <strong>林悠偉</strong>, 竝河伴裕, 東京大学数理情報科学教育研究センター 第6回データサイエンスコンテスト, 株式会社a.s.ist, 最優秀賞, 2024年9月. <a href="http://www.mi.u-tokyo.ac.jp/contest2023.html">http://www.mi.u-tokyo.ac.jp/contest2023.html</a>.</li>
+</ul>
+
   </body>
 </html>
