--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -53,8 +53,8 @@
 
 <h2>招待講演</h2>
 <ul>
-    <li><strong>林悠偉</strong>, 『小角散乱測定データを使用した試料パラメータのベイズ推定』, 第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」, SACLA実験研究棟会議室及び Webハイブリッドウェブイベント, 2023年3月.</li>
-    <li><strong>林悠偉</strong>, 『小角散乱データに基づく試料パラメータとモデルのベイズ推論』, 東京大学物性研究所 中性子セミナー, 機能物性セミナー, 東京大学物性研究所６階大講義室及びWeb ハイブリッドウェブイベント, 2024年4月.</li>
+    <li><strong>林悠偉</strong>, 『小角散乱測定データを使用した試料パラメータのベイズ推定』, 第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」, SACLA実験研究棟会議室及び Webハイブリッドウェブイベント, 2023年3月, http://www.spring8.or.jp/ja/science/meetings/2023/230307/.</li>
+    <li><strong>林悠偉</strong>, 『小角散乱データに基づく試料パラメータとモデルのベイズ推論』, 東京大学物性研究所 中性子セミナー, 機能物性セミナー, 東京大学物性研究所６階大講義室及びWeb ハイブリッドウェブイベント, 2024年4月, https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2.html?ptype=seminar&pid=21987.</li>
 </ul>
 
 <h2>会議/シンポジウム発表</h2>
