久住さんの受賞について更新

--- a/home.html
+++ b/home.html
@@ -95,18 +95,11 @@
     </p> -->
 
     <div class="section content">
-      <!--<h2>新着情報</h2>
+      <h2>新着情報</h2>
       <ul class="infos">
          <li class="info">
-          <span class="date">2019年5月18日(土)</span>
-          <span class="abst"> <a href="http://www.k.u-tokyo.ac.jp/complex/html/examinee/entrance.html">
-            第1回入試説明会 </a>  </span>
+        <span class="date">2024年4月15日</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」travel awardを受賞いたしました
         </li>
-        <li class="info">
-            <span class="date">2019年6月1日(土)</span>
-            <span class="abst"> <a href="http://www.k.u-tokyo.ac.jp/complex/html/examinee/entrance.html">
-              第2回入試説明会 </a>  </span>
-        </li> -->
       <!-- <li class="info">
           <span class="date">2018年6月1日</span>
           <span class="abst">第2回入試説明会</span>
@@ -118,8 +111,8 @@
         </li> -->
       </ul>
     </div>
-
-    <div class="section content">
+	
+	    <div class="section content">
       <h2>岡田研究室に入るには</h2>
       <p>
         訪問，見学などは随時受け付けています．<a href="http://mns.k.u-tokyo.ac.jp/people.html#recruit">こちら</a>をご参照ください。
