--- a/research.html
+++ b/research.html
@@ -84,89 +84,42 @@
           style="font-size:22px;display:inline-block;line-height:130%;text-indent:0px"><strong>学会での受賞</strong></span>
         <br />
         <br />
-        <a href="./karakida/" rel="nofollow">唐木田亮</a>
-        IBIS2015 学生最優秀プレゼンテーション賞</p>
-      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
-        ImPACT未来開拓研究会 ベストポスター賞</p>
-      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
-        2015年度物性若手夏の学校 分科会最優秀発表者 (分野A)</p>
-      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
-        2015年度人工知能学会 全国大会優秀賞 (口頭発表部門／インタラクティブ発表部門)</p>
-      <p><a href="./karakida/" rel="nofollow">唐木田亮</a>
-        2014年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="./karakida/" rel="nofollow">唐木田亮</a>
-        日本神経回路学会大会奨励賞
-        日本神経回路学会第24回全国大会 (JNNS2014)</p>
-      <p><a href="./tokuda/" rel="nofollow">徳田悟</a>
-        2013年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
-        人工知能学会全国大会学生奨励賞
-        第27回人工知能学会全国大会(JSAI2013)</p>
-      <p><a href="./%7Enagata/" rel="nofollow">永田賢二</a>
-        2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="./%7Eotsubo/" rel="nofollow">大坪洋介</a>
-        2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p>桑谷立
-        2011年度IEEE CIS Japan Chapter Young Researcher Award</p>
-      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
-        日本神経回路学会大会奨励賞
-        日本神経回路学会第21回全国大会 (JNNS2011)</p>
-      <p><a href="./%7Enagata/" rel="nofollow">永田賢二</a>
-        情報論的学習理論ワークショップ(IBIS2011)ポスター奨励賞</p>
-      <p>Ryota Hasegawa, <a href="./okada/" rel="nofollow">Masato Okada</a> and <a
-          href="http://www2.ipcku.kansai-u.ac.jp/~miyoshi/cnt/miyoshi.html" rel="nofollow">Seiji Miyoshi</a>
-        Journal of the Physical Society of Japan Papers of Editors' Choice (2011)
-        <br /></p>
-      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
-        人工知能学会全国大会優秀賞(口頭発表部門)
-        第25回人工知能学会全国大会 (JSAI2011)</p>
-      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a>
-        第五回Motor Control研究会優秀発表賞</p>
-      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> <a
-          href="./%7Eomori/" rel="nofollow">大森敏明</a> <a
-          href="http://www.acs.dis.titech.ac.jp/index.html" rel="nofollow">青西亨</a> <a
-          href="./%7Eokada/" rel="nofollow">岡田真人</a>
-        情報処理学会　平成22年度 情報処理学会論文誌 数理モデル化と応用 優秀論文賞</p>
-      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
-        SNSS2011 Data Analysis Challenge Award
-        システム神経生物学スプリングスクール 2011 (SNSS2011)</p>
-      <p><a href="./hterashima/" rel="nofollow">寺島裕貴</a>
-        Organization for Computational Neuroscience Student Travel Award
-        19th Annual Computational Neuroscience Meeting (CNS*2010)</p>
-      <p><a href="./%7Eomori/" rel="nofollow">大森敏明</a> 計測自動制御学会 生体・生理工学部会 研究奨励賞</p>
-      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　平成22年度山下記念研究賞</p>
-      <p><a href="./%7Eiida/" rel="nofollow">飯田宗徳</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010</p>
-      <p><a href="./%7Eshimizu/" rel="nofollow">清水裕一郎</a> 情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010
-      </p>
-      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a> 2009年度IEEE CIS Japan Chapter Young
-        Researcher Award</p>
-      <p><a href="./%7Etakiyama/" rel="nofollow">瀧山健</a> 日本神経回路学会2009年度全国大会　大会奨励賞
-        <br /></p>
-      <p><a href="./%7Eotsubo/" rel="nofollow">大坪洋介</a> 日本神経回路学会2009年度全国大会　大会奨励賞
-        <br /></p>
-      <p><span class="noexists">Kazuho Watanabe<a
-            href="./index.php?cmd=edit&amp;page=Kazuho%20Watanabe&amp;refer=%BC%F5%BE%DE">?</a></span>,
-        <span class="noexists">Shotaro Akaho<a
-            href="./index.php?cmd=edit&amp;page=Shotaro%20Akaho&amp;refer=%BC%F5%BE%DE">?</a></span>,
-        <span class="noexists">Shinichiro Omachi<a
-            href="./index.php?cmd=edit&amp;page=Shinichiro%20Omachi&amp;refer=%BC%F5%BE%DE">?</a></span>
-        and <a href="./okada/" rel="nofollow">Masato Okada</a>　The German Classification
-        Society - Method Award, 33rd Annual Conference of the GfKI, March 13th, 2009.</p>
-      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2008年度日本神経回路学会　研究賞
-        <br /></p>
-      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2007年度IEEE CIS Japan Chapter Young
-        Researcher Award
-        <br /></p>
-      <p><a href="http://www.stat.phys.titech.ac.jp/~sei/index_ja.html" rel="nofollow">鈴木正</a> 2007年度日本物理学会　若手奨励賞
-        <br /></p>
-      <p><a href="./%7Eoizumi/" rel="nofollow">大泉匡史</a> 2006年度日本神経回路学会　奨励賞
-        <br /></p>
-      <p><a href="./%7Emiura/" rel="nofollow">三浦佳二</a>
-        Neural Information Processing System Conference Outstanding Student Paper Awards (2005)
-        <br /></p>
-      <p><a href="./%7Emiura/" rel="nofollow">三浦佳二</a>　2005年度日本神経回路学会　研究賞
-        <br /></p>
-      <p><a href="http://www.stat.phys.titech.ac.jp/~sei/index_ja.html" rel="nofollow">鈴木正</a><br /></p>
+	久住太一　 Microscopy and Microanalysis 2024 travel award<p>
+      唐木田亮　IBIS2015 学生最優秀プレゼンテーション賞<p>
+      徳田悟　ImPACT未来開拓研究会 ベストポスター賞<p>
+      徳田悟　2015年度物性若手夏の学校 分科会最優秀発表者 (分野A)<p>
+      徳田悟　2015年度人工知能学会 全国大会優秀賞 (口頭発表部門／インタラクティブ発表部門)<p>
+      唐木田亮　2014年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      唐木田亮　日本神経回路学会大会奨励賞 日本神経回路学会第24回全国大会 (JNNS2014)<p>
+      徳田悟　2013年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      寺島裕貴　人工知能学会全国大会学生奨励賞 第27回人工知能学会全国大会(JSAI2013)<p>
+      永田賢二　2011年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      大坪洋介　2011年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      桑谷立　2011年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      寺島裕貴　日本神経回路学会大会奨励賞 日本神経回路学会第21回全国大会 (JNNS2011)<p>
+      永田賢二　情報論的学習理論ワークショップ(IBIS2011)ポスター奨励賞<p>
+      Ryota Hasegawa,Masato Okada and Seiji Miyoshi,<br>
+        Journal of the Physical Society of Japan Papers of Editors' Choice (2011)<p>
+      寺島裕貴　人工知能学会全国大会優秀賞(口頭発表部門)  第25回人工知能学会全国大会 (JSAI2011)<p>
+      瀧山健　第五回Motor Control研究会優秀発表賞<p>
+      飯田宗徳 大森敏明 青西亨 岡田真人 情報処理学会　平成22年度 情報処理学会論文誌 数理モデル化と応用 優秀論文賞<p>
+      寺島裕貴　SNSS2011 Data Analysis Challenge Award システム神経生物学スプリングスクール 2011 (SNSS2011)<p>
+      寺島裕貴　Organization for Computational Neuroscience Student Travel Award 19th Annual Computational Neuroscience Meeting (CNS*2010)<p>
+      大森敏明　計測自動制御学会 生体・生理工学部会 研究奨励賞<p>
+      飯田宗徳　情報処理学会　平成22年度山下記念研究賞<p>
+      飯田宗徳　情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010<p>
+      清水裕一郎　情報処理学会　数理モデル化と問題解決研究会賞プレゼンテーション賞 2010<p>
+      瀧山健　2009年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      瀧山健　日本神経回路学会2009年度全国大会　大会奨励賞<p>
+      大坪洋介　日本神経回路学会2009年度全国大会　大会奨励賞<p>
+      Kazuho Watanabe,Shotaro Akaho,Shinichiro Omachi and Masato Okada<br>
+	  The German Classification Society - Method Award, 33rd Annual Conference of the GfKI, March 13th, 2009.<p>
+      大泉匡史　2008年度日本神経回路学会　研究賞<p>
+      大泉匡史　2007年度IEEE CIS Japan Chapter Young Researcher Award<p>
+      鈴木正　2007年度日本物理学会　若手奨励賞<p>
+      大泉匡史　2006年度日本神経回路学会　奨励賞<p>
+      三浦佳二　Neural Information Processing System Conference Outstanding Student Paper Awards (2005)<p>
+      三浦佳二　2005年度日本神経回路学会　研究賞<p>
 
     </div>
   </section>
