久住さんの受賞について更新

--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
       <h2>新着情報</h2>
       <ul class="infos">
          <li class="info">
-        <span class="date">2024年4月15日</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」travel awardを受賞いたしました
+        <span class="date">2024年4月15日</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました
         </li>
       <!-- <li class="info">
           <span class="date">2018年6月1日</span>
