--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
           style="font-size:22px;display:inline-block;line-height:130%;text-indent:0px"><strong>学会での受賞</strong></span>
         <br />
         <br />
-	久住太一　 Microscopy and Microanalysis 2024 travel award<p>
+	久住太一　 Microscopy and Microanalysis 2024 Student Scholar Award<p>
       唐木田亮　IBIS2015 学生最優秀プレゼンテーション賞<p>
       徳田悟　ImPACT未来開拓研究会 ベストポスター賞<p>
       徳田悟　2015年度物性若手夏の学校 分科会最優秀発表者 (分野A)<p>
