業績を加筆

--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -1,47 +1,129 @@
 <!DOCTYPE html>
 <html lang="ja" style="height:100%;">
 
+<!-- <head>
+  <link rel="icon" href="https://via.placeholder.com/70x70">
+  <link rel="stylesheet" href="./mvp.css">
+
+  <meta charset="utf-8">
+  <meta name="description" content="My description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>My title</title>
+</head> -->
+
 <head>
+  <link rel="icon" href="https://via.placeholder.com/70x70">
+  <link rel="stylesheet" href="./mvp.css">
+
   <meta charset="UTF-8">
+  <meta name="description" content="My description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taichi Kusumi</title>
 </head>
 
 <body id="index-page">
-  <h2>久住 太一 (Taichi Kusumi)</h2>
-  <br>
-  Last updated: September 3, 2023
-  <br>
-  <hr>
-  <ul>
-    <li>所属</li>
-    <ul>
-      <li>東京大学大学院新領域創成科学研究科複雑理工学専攻 岡田研究室</li>
-    </ul>
-    <li>連絡先</li>
-    <ul>
-      <li>部屋 : 柏の葉キャンパス基盤棟 7A8</li>
-      <li>E-mail: kusumi[at]mns.k.u-tokyo.ac.jp</li>
-    </ul>
-  </ul>
-  <hr>
-  <ul>
-    <li>プロフィール</li>
-    2018.4 東京大学理科一類 入学<br>
-    2022.9 東京大学文学部人文学科哲学専修 卒業<br>
-    2022.10 東京大学大学院新領域創成科学研究科複雑理工学専攻 入学<br>
-  </ul>
-  <hr>
-  <ul>
-    <li>英文学術論文</li>
-    <ol>
-      <li>
-        Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuaki Kawahara, Naoya Shibata, Masato Okada<br>
-        Fast Reconstruction of Scanning Transmission Electron Microscopy Images Using Markov Random Field Model<br>
-        Ultramicroscopy, 253, 2023, 113811<br>
-        <a href="https://doi.org/10.1016/j.ultramic.2023.113811">https://doi.org/10.1016/j.ultramic.2023.113811</a>
-      </li>
-    </ol>
-  </ul>
+  <header>
+    <nav>
+      Last updated: April 16, 2024
+      <ul>
+        <li><a href="#">Contents</a>
+          <ul>
+            <li><a href="#career">経歴</a></li>
+            <li><a href="#paper">英文学術論文</a></li>
+            <li><a href="#conference">学会</a></li>
+            <li><a href="#award">受賞</a></li>
+            <li><a href="#others">その他</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <Div Align="left">
+      <h1> Taichi Kusumi <br> 久住　太一 </h1>
+      所属：東京大学大学院新領域創成科学研究科複雑理工学専攻 岡田研究室 <br>
+      居室：柏の葉キャンパス基盤棟　7A4 <br>
+      E-mail：kusumi[depth]mns.k.u-tokyo.ac.jp (Please insert @ instead of [depth].)
+    </Div>
+  </header>
+
+  <main>
+    <hr>
+    <section id="career">
+      <header>
+        <h2>経歴</h2>
+      </header>
+      <main>
+        2018 Apr.&emsp;東京大学理科一類　入学<br>
+        2022 Sep.&emsp;東京大学文学部人文学科　哲学専修　卒業<br>
+        2022 Oct.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　入学<br>
+        2024 Mar.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　修了<br>
+        2024 Apr.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　博士課程　入学<br>
+        2024 Apr.&emsp;東京大学「グリーントランスフォーメーションを先導する高度人材育成（SPRING GX）」プロジェクト
+      </main>
+    </section>
+    <br>
+    <section id="paper">
+      <header>
+        <h2>英文学術論文</h2>
+      </header>
+      <ol reversed>
+        <li>
+          <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, N. Shibata, M. Okada,
+          "Fast Reconstruction of Scanning Transmission Electron Microscopy Images Using Markov Random Field Model,"
+          Ultramicroscopy,
+          <b>253</b>, 2023, 113811.
+          <a href="https://doi.org/10.1016/j.ultramic.2023.113811">https://doi.org/10.1016/j.ultramic.2023.113811</a>
+        </li>
+      </ol>
+    </section>
+    <br>
+    <section id="conference">
+      <header>
+        <h2>学会発表</h2>
+      </header>
+      <ol reversed>
+        <li>
+          (Poster)
+          <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, N. Shibata, and M. Okada, “Real-time Denoising
+          Algorithm for
+          STEM Imaging Using Markov Random Field Model,” Microscopy and Microanalysis 2024, Cleveland, Ohio, USA,
+          July, 2024.
+        </li>
+        <li>
+          (Oral)
+          <b><u>久住太一</u></b>，片上舜，石川亮，川原一晃，柴田直哉，岡田真人，「マルコフ確率場モデルに基づくSTEM像の実時間修復」，日本顕微鏡学会，幕張メッセ，千葉，2024年6月．
+        </li>
+      </ol>
+    </section>
+    <br>
+    <section id="award">
+      <header>
+        <h2>受賞</h2>
+      </header>
+      <ol reversed>
+        <li>
+          Microscopy and Microanalysis 2024, Student Scholar Award, April, 2024.<sup>NEW</sup>
+          （国際学会Microscopy and Microanalysisに応募した学生の中から，例年10名程度が選ばれる賞．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．）
+        </li>
+      </ol>
+    </section>
+    <br>
+    <section id="others">
+      <header>
+        <h2>その他</h2>
+      </header>
+      <ol reversed>
+        <li>
+          （修士課程短縮修了）新領域創成科学研究科複雑理工学専攻において修士短縮修了特別審査に合格し，半年間の短縮終了が認められた．
+        </li>
+        <li>
+          （ソフトウェア実装）マルコフランダムフィールドモデルを用いたリアルタイム画像修復プログラムを開発し，電子顕微鏡関連データの解析ソフトウェアDigitalMicrograph(Gatan Inc.)に実装した．
+        </li>
+        <li>
+          （特許出願）岡田真人（17%），片上舜（17%），<b><u>久住太一（16%）</u></b>，柴田直哉（17%），石川亮（17%），川原一晃（16%），マルコフランダムフィールドモデルを用いた電子顕微鏡画像の画像修復装置，特願2023-75963，2023年5月2日出願．
+        </li>
+      </ol>
+    </section>
 </body>
 
 </html>
