--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -25,15 +25,67 @@
 <body id="index-page">
   <header>
     <nav>
-      Last updated: April 16, 2024
+      <Div Align="left">Last updated: <time id="modified_date"></time></Div>
+      <script>
+        /**
+          * ステップ1
+          * ファイルの更新日を取得
+          */
+        // HTMLファイルの最終更新日を取得
+        const last = new Date(document.lastModified);
+        /**
+          * ステップ2
+          * 取得した日付データを「年・月・日」に分けて取得
+          */
+        // 取得した日付を「年・月・日」に分けて変数に格納する
+        const year = last.getFullYear();
+        const month = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+        const d = new Date();
+        let name = month[d.getMonth()];
+        // const month = last.getMonth() + 1;
+        const date = last.getDate();
+        /**
+          * ステップ3
+          * 「月・日」の値が1桁の場合は先頭に「0」を追加して2桁に修正
+          */
+        // 月・日の値を修正した後に格納する変数を用意する
+        let fixedMonth = month;
+        let fixedDate = date;
+        // 月の値が10より小さい場合は先頭に「0」を追加
+        if (month < 10) {
+          fixedMonth = "0" + month;
+        }
+        // 日の値が10より小さい場合は先頭に「0」を追加
+        if (date < 10) {
+          fixedDate = "0" + date;
+        }
+        /**
+          * ステップ4
+          * 上書き用の日付のテキストを作成
+          */
+        // 表示用のテキストを作成 例: 2024年2月8日
+        const viewDateText = year + ' ' + name + ', ' + date;
+        // データ用の文字列を作成 例: 2024-02-08
+        const datetimeText = year + "-" + fixedMonth + "-" + fixedDate;
+        /**
+          * ステップ5
+          * HTMLの要素に値を上書き
+          */
+        // 更新日の表示先のHTML要素「time」タグを取得
+        const target = document.getElementById('modified_date');
+        // timeタグの内容を上書きする 例: 2024年2月8日
+        target.textContent = viewDateText;
+        // timeタグのdatetime属性を追加する 例: 2024-02-08
+        target.setAttribute("datetime", datetimeText);
+      </script>
       <ul>
         <li><a href="#">Contents</a>
           <ul>
-            <li><a href="#career">経歴</a></li>
-            <li><a href="#paper">英文学術論文</a></li>
-            <li><a href="#conference">学会</a></li>
-            <li><a href="#award">受賞</a></li>
-            <li><a href="#others">その他</a></li>
+            <li><a href="#career">Academic Career</a></li>
+            <li><a href="#publication">Publication</a></li>
+            <li><a href="#conference">Conference</a></li>
+            <li><a href="#award">Awards</a></li>
+            <li><a href="#others">Others</a></li>
           </ul>
         </li>
       </ul>
@@ -50,21 +102,20 @@
     <hr>
     <section id="career">
       <header>
-        <h2>経歴</h2>
+        <h2>Academic Career</h2>
       </header>
-      <main>
-        2018 Apr.&emsp;東京大学理科一類　入学<br>
-        2022 Sep.&emsp;東京大学文学部人文学科　哲学専修　卒業<br>
-        2022 Oct.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　入学<br>
-        2024 Mar.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　修了<br>
-        2024 Apr.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　博士課程　入学<br>
-        2024 Apr.&emsp;東京大学「グリーントランスフォーメーションを先導する高度人材育成（SPRING GX）」プロジェクト
-      </main>
+      2018 Apr.&emsp;東京大学理科一類　入学<br>
+      2022 Sep.&emsp;東京大学文学部人文学科　哲学専修　卒業<br>
+      2022 Oct.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　入学<br>
+      2024 Mar.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　修了<br>
+      2024 Apr.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　博士課程　入学<br>
+      2024 Apr.&emsp;東京大学「グリーントランスフォーメーションを先導する高度人材育成」プロジェクト（SPRING GX）
     </section>
-    <br>
-    <section id="paper">
+
+    <hr>
+    <section id="publication">
       <header>
-        <h2>英文学術論文</h2>
+        <h2>Publication</h2>
       </header>
       <ol reversed>
         <li>
@@ -76,41 +127,42 @@
         </li>
       </ol>
     </section>
-    <br>
+    <hr>
     <section id="conference">
       <header>
-        <h2>学会発表</h2>
+        <h2>Conference</h2>
       </header>
       <ol reversed>
         <li>
-          (Poster)
+          （査読有り・ポスター）
           <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, N. Shibata, and M. Okada, “Real-time Denoising
           Algorithm for
           STEM Imaging Using Markov Random Field Model,” Microscopy and Microanalysis 2024, Cleveland, Ohio, USA,
           July, 2024.
         </li>
         <li>
-          (Oral)
+          （査読無し・口頭）
           <b><u>久住太一</u></b>，片上舜，石川亮，川原一晃，柴田直哉，岡田真人，「マルコフ確率場モデルに基づくSTEM像の実時間修復」，日本顕微鏡学会，幕張メッセ，千葉，2024年6月．
         </li>
       </ol>
     </section>
-    <br>
+    <hr>
     <section id="award">
       <header>
-        <h2>受賞</h2>
+        <h2>Awards</h2>
       </header>
       <ol reversed>
         <li>
-          Microscopy and Microanalysis 2024, Student Scholar Award, April, 2024.<sup>NEW</sup>
-          （国際学会Microscopy and Microanalysisに応募した学生の中から，例年10名程度が選ばれる賞．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．）
+          Microscopy and Microanalysis 2024, Student Scholar Award, April, 2024.<sup>NEW</sup><br>
+          国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる賞．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．[<a
+            href="https://microscopy.org/m-and-m-meeting-travel-awards" target="_blank">Link</a>]
         </li>
       </ol>
     </section>
-    <br>
+    <hr>
     <section id="others">
       <header>
-        <h2>その他</h2>
+        <h2>Others</h2>
       </header>
       <ol reversed>
         <li>
