招待講演のページを変更

--- a/lab.html
+++ b/lab.html
@@ -82,6 +82,13 @@
 林悠偉　「<a href="pdf/2024_issp_hayashi.pdf">⼩⾓散乱データに基づく試料パラメータとモデルのベイズ推論</a>」
 <p> 
 
+2023/10/30 <a href="https://www.aichisr.jp/events/event_kosyukai/2023/aichisr_seminar_2023_3.html"target="_blank" rel="noopener noreferrer">2023年度 あいちシンクロトロン光センター 公開セミナー<br>
+「データ駆動科学によるデータ解析高度化~ベイズ計測~」</a>」<br>
+岡田真人　「<a href="pdf/20231030_aichisr_okada.pdf">ベイズ計測</a>」<br>
+片上舜　「<a href="pdf/20231030_aichisr_katakami.pdf">EMC ベイズ推定を全てのユーザーへ</a>」<br>	
+<p> 
+
+
 2023/9/1 「<a href="https://www.pasums.issp.u-tokyo.ac.jp/teams/news/1741"target="_blank" rel="noopener noreferrer">物性研理論セミナー</a>」<br>
 片上舜　「<a href="pdf/20230901_katakami.pdf">分散関係計測データに対するベイズパラメータ推定</a>」
 <p> 
