Award欄に渡航費助成の件を追加

--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -153,6 +153,11 @@
       </header>
       <ol reversed>
         <li>
+          風戸研究奨励会国際会議発表渡航助成，2024年4月．<sup>NEW</sup><br>
+          電子顕微鏡並びに関連装置の研究・開発及び電子顕微鏡並びに関連装置を用いた研究（医学，生物学，物理学，化学，材料学，ナノテクノロジー，その他）に携っている研究者を対象とした渡航助成．最大50万円の助成が与えられる．
+          [<a href="https://www.kazato.org/application/grant_program.html" target="_blank">Link</a>]
+        </li>
+        <li>
           Microscopy and Microanalysis 2024, Student Scholar Award, April, 2024.<sup>NEW</sup><br>
           国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる賞．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．[<a
             href="https://microscopy.org/m-and-m-meeting-travel-awards" target="_blank">Link</a>]
