久住さんの情報を更新

--- a/home.html
+++ b/home.html
@@ -97,8 +97,12 @@
     <div class="section content">
       <h2>新着情報</h2>
       <ul class="infos">
+		           <li class="info">
+        <span class="date">2024/4/19</span> D1 久住太一さんが「<a href="https://www.kazato.org/application/grant_program.html">風戸研究奨励会国際会議発表渡航助成</a>」に採択されました。<br>電子顕微鏡並びに関連装置の研究・開発及び電子顕微鏡並びに関連装置を用いた研究（医学，生物学，物理学，化学，材料学，ナノテクノロジー，その他）に携っている研究者を対象とした渡航助成．最大50万円の助成が与えられる．
+        </li><p>
+		  </p>
          <li class="info">
-        <span class="date">2024年4月15日</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました
+        <span class="date">2024/4/15</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えらる．
         </li>
       <!-- <li class="info">
           <span class="date">2018年6月1日</span>
