--- a/research.html
+++ b/research.html
@@ -82,9 +82,10 @@
         <br />
         <br />
         <span
-          style="font-size:22px;display:inline-block;line-height:130%;text-indent:0px"><strong>学会での受賞</strong></span>
+          style="font-size:22px;display:inline-block;line-height:130%;text-indent:0px"><strong>受賞</strong></span>
         <br />
         <br />
+	久住太一　 風戸研究奨励会国際会議発表渡航助成，2024年4月<p>
 	久住太一　 Microscopy and Microanalysis 2024 Student Scholar Award<p>
       唐木田亮　IBIS2015 学生最優秀プレゼンテーション賞<p>
       徳田悟　ImPACT未来開拓研究会 ベストポスター賞<p>
