久住さんの情報を修正

--- a/home.html
+++ b/home.html
@@ -102,8 +102,8 @@
         </li><p>
 		  </p>
          <li class="info">
-        <span class="date">2024/4/15</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えらる．
-        </li>
+        <span class="date">2024/4/15</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>
+        国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．</li>
       <!-- <li class="info">
           <span class="date">2018年6月1日</span>
           <span class="abst">第2回入試説明会</span>
