--- a/lab.html
+++ b/lab.html
@@ -81,10 +81,11 @@
 2024/4/19　D1 久住太一さんが「<a href="https://www.kazato.org/application/grant_program.html">風戸研究奨励会国際会議発表渡航助成</a>」に採択されました。<br>電子顕微鏡並びに関連装置の研究・開発及び電子顕微鏡並びに関連装置を用いた研究（医学，生物学，物理学，化学，材料学，ナノテクノロジー，その他）に携っている研究者を対象とした渡航助成．最大50万円の助成が与えられる．
 <p> 
 	
-2024/4/15　D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えらる．
+2024/4/15　D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>
+国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．
 <p> 
 	
-		 <p> <dt class=leftline>招待講演</dt>
+	    <p> <dt class=leftline>招待講演</dt>
 2024/4/10 「<a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2.html?ptype=seminar&pid=21987"target="_blank" rel="noopener noreferrer">物性研中性子セミナー・機能物性セミナー</a>」<br>
 林悠偉　「<a href="pdf/2024_issp_hayashi.pdf">⼩⾓散乱データに基づく試料パラメータとモデルのベイズ推論</a>」
 <p> 
