--- a/lab.html
+++ b/lab.html
@@ -128,6 +128,11 @@
 岡田真人 「<a href="pdf/20171101_measurement_informatics.pdf">導入編　計測インフォマティクスとベイズ推論</a>」
 <p>	
 	
+<p>
+2012/12/17 「物性研セミナー」物性研6階 大講義室<br>
+岡田真人 「<a href="pdf/20121217_bussei.pdf">ベイズ推論と物性科学</a>」
+<p>	
+	
 <dt class=leftline>口頭発表</dt>
 2023/3/22-25 <a href="https://www.jps.or.jp/activities/meetings/spring/spring_index.php"target="_blank"rel="noopener noreferrer">日本物理学会</a><br>
 柏村周平　　「吸収“率”ではなく吸収“量”を対象とした吸収スペクトルのベイズ的解析」<br>
