岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -141,6 +141,12 @@ Journal of Magnetic Resonance 357(2023)107585
 Scientific Reports volume 13, 16140 (2023)
 </li>
 
+<li>Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
+"Bayesian Inference for Small-Angle Scattering Data"<br>
+Journal of the Physical Society of Japan 92(9) (2023)
+</li>
+
+
 <li>Hiroyuki Kumazoe, Kazunori Iwamitsu, Masaki Imamura, Kazutoshi Takahashi, Yoh-ichi Mototake, Masato Okada, Ichiro Akai<br>
 "Quantifying physical insights cooperatively with exhaustive search for Bayesian spectroscopy of X-ray photoelectron spectra"<br>
 Scientific Reports 13(1) (2023)
