岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -132,7 +132,7 @@ ACM Transactions on GraphicsVolume 42Issue 6Article No.193pp 1–16
 </li>
  
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
-"Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo2Zn20"<br>
+"Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo<sub>2</sub>Zn<sub>20</sub>"<br>
 Journal of Magnetic Resonance 357(2023)107585
 </li>
 
@@ -153,7 +153,7 @@ Scientific Reports 13(1) (2023)
 </li>
 
 <li>Shogo Yoshida, Hajime Ueda, Tetsuya Mutou, Shun Katakami, Masato Okada, Yuichi Yokoyama, Masaichiro Mizumaki, Naoka Hiraoka, Kentaro Kitagawa, Yoshinori Haga, Takuto Fujii, Yusuke Nakai, Takeshi Mito<br>
-"Unique Band Structure of Pressure Induced Semiconducting State in SmS Characterized by $^{33}$S-Nuclear Magnetic Resonance Measurements"<br>
+"Unique Band Structure of Pressure Induced Semiconducting State in SmS Characterized by <sup>33</sup>S-Nuclear Magnetic Resonance Measurements"<br>
 Journal of the Physical Society of Japan, (2023)
 </li>
 
@@ -178,7 +178,7 @@ Journal of the Physical Society of Japan.92, 044002 (2023)
 </li>						
 	
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
-"Bayesian approach to $T_1$ analysis in NMR spectroscopy with applications to solid state physics"<br>
+"Bayesian approach to <i>T</i><sub>1</sub> analysis in NMR spectroscopy with applications to solid state physics"<br>
 Journal of the Physical Society of Japan.92, 054002 (2023)
 </li>						
 						
@@ -249,7 +249,7 @@ Journal of the Physical Society of Japan, 91, 034701 (2022)<br>
 
 	
 <li>Taiga Yamasaki, Kazunori Iwamitsu, Hiroyuki Kumazoe, Masato Okada,Masaichiro Mizumaki & Ichiro Akai<br>
-"<a href="https://www.tandfonline.com/doi/full/10.1080/27660400.2021.1932108" target="_blank"rel="noopener noreferrer">Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L3, -L2 edges</a><br>
+"<a href="https://www.tandfonline.com/doi/full/10.1080/27660400.2021.1932108" target="_blank"rel="noopener noreferrer">Bayesian spectroscopy of synthesized soft X-ray absorption spectra showing magnetic circular dichroism at the Ni-L<sub>3</sub>, -L<sub>2</sub> edges</a><br>
  Science and Technology of Advanced Materials: Methods,1(1) 75–86, (2021)<br>
 </li>
 		
