--- a/lab.html
+++ b/lab.html
@@ -85,10 +85,14 @@
 国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．
 <p> 
 	
-	    <p> <dt class=leftline>招待講演</dt>
-2024/4/10 「<a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2.html?ptype=seminar&pid=21987"target="_blank" rel="noopener noreferrer">物性研中性子セミナー・機能物性セミナー</a>」<br>
-林悠偉　「<a href="pdf/2024_issp_hayashi.pdf">⼩⾓散乱データに基づく試料パラメータとモデルのベイズ推論</a>」
-<p> 
+ <p> <dt class=leftline>招待講演</dt>
+
+2024/5/8 「<a href="http://www.spring8.or.jp/ja/science/meetings/2024/240508/"target="_blank" rel="noopener noreferrer">データ駆動科学シンポジウム「ベイズ計測によるSPring-8のデータ解析高度化」</a>」<br>
+岡田真人　「<a href="pdf/20240508SP8.pdf">基調講演ベイズ計測をSPring-8に導入するメリットはあるのか？</a>」<br>
+		　　　　　　<a href="pdf/20240508SP8_abstract.pdf">アブストラクト</a>
+		<p> 2024/4/10 「<a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2.html?ptype=seminar&pid=21987" target="_blank" rel="noopener noreferrer">物性研中性子セミナー・機能物性セミナー</a>」<br>
+		  林悠偉　「<a href="pdf/2024_issp_hayashi.pdf">⼩⾓散乱データに基づく試料パラメータとモデルのベイズ推論</a>」 </p>
+		<p> 
 
 2023/10/30 <a href="https://www.aichisr.jp/events/event_kosyukai/2023/aichisr_seminar_2023_3.html"target="_blank" rel="noopener noreferrer">2023年度 あいちシンクロトロン光センター 公開セミナー<br>
 「データ駆動科学によるデータ解析高度化~ベイズ計測~」</a>」<br>
