岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(329～)</h4>
-<ol reversed start="332">
+<ol reversed start="333">
+
+<li> 
+Yasuhiko IGARASHI, Fabio IESARI, Hiroyuki SETOYAMA, Toshihiro OKAJIMA,Hiroyuki KUMAZOE, Ichiro AKAI, Masato OKADA,<br>
+"Appropriate basis selection based on Bayesian inference for analyzing measured data reflecting photoelectron wave interference"<br>
+Journal of the Physical Society of Japan, in press(2024)
+</li>
 
 <li> 
 Atsushi Machida, Takeshi Watanabe, Masaichiro Mizumaki, Kenji Nagata and Masato Okada<br>
