[UPDATE] update katakami's homepage.

--- a/katakami/index.html
+++ b/katakami/index.html
@@ -84,6 +84,9 @@
     <li>招待講演</li>
       <ol reversed>
         <li>
+            片上舜,「EMC ベイズ推定を全てのユーザーへ」, 『2023年度 あいちシンクロトロン光センター 公開セミナー「データ駆動科学によるデータ解析高度化~ベイズ計測~」』, あいちシンクロトロン光センター 2F大会議室及びオンラインのハイブリッド開催 2023年10月.
+        </li>
+        <li>
             片上舜,「ベイズ推定のスキーム〜全てのユーザーのために〜」, 『第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」』, SACLA実験研究棟大会議室 及びwebハイブリッド開催 2023年3月.
         </li>
         <li>
