--- a/nabika/index.html
+++ b/nabika/index.html
@@ -35,14 +35,13 @@
 	  <li>英文学術論文</li>
 	  <ol> 
 		<li>
-			(採録決定) Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada <br> 
-			"Bayesian spectral analysis with binomial disturibution noise model" <br>
-			IPSJ Online Transactions
+			Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada. “Bayesian Spectral Deconvolution Based on Binominal Distribution”, Transactions on Mathematical Modeling and its Applications, 47-56, 1882-7780, February 2024.
 		</li><br>
 		<li>
-			(採録決定) Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada <br> 
-			"Bayesian active learning with model selection for spectral experiments" <br> 
-			Scientific Reports
+			Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada. “Bayesian Active Learning with Model Selection for Spectral Experiments”, Scientific Reports, 14(1), 3680, February 2024.
+		</li><br>
+		<li>
+			Tomohiro Nabika, Satoru Iwata, Hiroko Satoh. “Exact Solution for Minimization of Root Mean Square Deviation with G-RMSD to Determine Molecular Similarity”, Bulletin of the Chemical Society of Japan, 97(4), April 2024.
 		</li><br>
 	  </ol>
 	  <li>国際学会</li>
@@ -73,6 +72,12 @@
 	  </ol>
 	  <li>受賞歴等</li>
 	  <ol reversed>
+        <li>
+            JST次世代研究者挑戦的研究プログラム（SPRING） 東京大学「グリーントランスフォーメーション（ＧＸ）を先導する高度人材育成（SPRING GX）」。 2024 年 4月 – 現在
+          </li><br>
+          <li>
+            オープンソースソフトウェア: X-GRMSD: Exact solution for RMSD minimization with G-RMSD to Determine Molecular Similarity
+          </li><br>
 		<li>
 			東京大学 数理・データサイエンスコンソーシアム 第６回データサイエンスコンテスト 最優秀賞
 		</li><br>
