岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(329～)</h4>
-<ol reversed start="333">
+<ol reversed start="334">
+
+<li> 
+Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuaki Kawahara, Tiarnan Mullarkey, Julie Marie Bekkevold, Jonathan J. P. Peters, Lewys Jones, Naoya Shibata, Masato Okada<br>
+"New Poisson denoising method for pulse-count STEM imaging"<br>
+Ultramicroscopy, 113996 (2024)
+</li>
 
 <li> 
 Yasuhiko IGARASHI, Fabio IESARI, Hiroyuki SETOYAMA, Toshihiro OKAJIMA,Hiroyuki KUMAZOE, Ichiro AKAI, Masato OKADA,<br>
@@ -168,7 +174,7 @@ Journal of the Physical Society of Japan, (2023)
 Energy Advances, 2, 1014-1021 (2023)
 </li>
 
-<li>Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuki Kawahara, Naoya Shibata, Masato Okada<br>
+<li>Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuaki Kawahara, Naoya Shibata, Masato Okada<br>
 "Fast reconstruction of scanning transmission electron microscopy images using Markov random field model"<br>
 Ultramicroscopy, 113811 (2023)
 </li>
