--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -119,11 +119,19 @@
       </header>
       <ol reversed>
         <li>
+          <b><u>T, Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, T. Mullarkey, J. M. Bekkevold,
+          J. J. P. Peters, L. Jones, N. Shibata, M. Okada,
+          "New Poisson denoising method for pulse-count STEM imaging," Ultramicroscopy, 2024, 113996.
+          <a href="https://doi.org/10.1016/j.ultramic.2024.113996"
+            target="_blank">https://doi.org/10.1016/j.ultramic.2024.113996</a>
+        </li>
+        <li>
           <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, N. Shibata, M. Okada,
           "Fast Reconstruction of Scanning Transmission Electron Microscopy Images Using Markov Random Field Model,"
           Ultramicroscopy,
           <b>253</b>, 2023, 113811.
-          <a href="https://doi.org/10.1016/j.ultramic.2023.113811">https://doi.org/10.1016/j.ultramic.2023.113811</a>
+          <a href="https://doi.org/10.1016/j.ultramic.2023.113811"
+            target="_blank">https://doi.org/10.1016/j.ultramic.2023.113811</a>
         </li>
       </ol>
     </section>
