岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(329～)</h4>
-<ol reversed start="334">
+<ol reversed start="335">
+
+<li> 
+Atsushi Machida, Kenji Nagata, Ryo Murakami, Hiroshi Shinotsuka, Hayaru Shouno, Hideki Yoshikawa and Masato Okada<br>
+"Bayesian inference method utilizing SESSA in quantitative layer structure estimation from XPS data"<br>
+Journal of Electron Spectroscopy and Related Phenomena, Volume 273, 147449 (2024)
+</li>
 
 <li> 
 Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuaki Kawahara, Tiarnan Mullarkey, Julie Marie Bekkevold, Jonathan J. P. Peters, Lewys Jones, Naoya Shibata, Masato Okada<br>
