baysian.html,lab,htmlを更新、pdfを追加

--- a/lab.html
+++ b/lab.html
@@ -75,6 +75,7 @@
 					<p><a href="pdf/deep_learning.pdf">データ駆動科学とディープラーニング</a><a class="anchor" id="news6"></a>
 	        <p><a href="pdf/cyberphysicalsystem.pdf">データ駆動科学と民間就職 サイバーフィジカルシステムの観点から</a><a class="anchor" id="news4"></a>
 				<p><a href="pdf/R&D.pdf">データ駆動科学と企業R&D組織のフラット化</a><a class="anchor" id="news4"></a>
+					<p><a href="pdf/2024jobmobility.pdf">データ駆動科学と人材の流動化</a><a class="anchor" id="news4"></a>
 			
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>新着情報</dt>
