--- a/bayesian.html
+++ b/bayesian.html
@@ -94,7 +94,8 @@
 	<p><a href="pdf/approximation_algorithm.pdf">データ駆動科学と近似アルゴリズム</a>
 	<p><a href="pdf/deep_learning.pdf">データ駆動科学とディープラーニング</a>
 	<p><a href="pdf/cyberphysicalsystem.pdf">データ駆動科学と民間就職 サイバーフィジカルシステムの観点から</a>
-	<p><a href="pdf/R&D.pdf">データ駆動科学と企業R&D組織のフラット化</a></a>
+	<p><a href="pdf/R&D.pdf">データ駆動科学と企業R&D組織のフラット化</a>
+	<p><a href="pdf/2024jobmobility.pdf">データ駆動科学と人材の流動化</a><a class="anchor" id="news4"></a>
 	
 	<p class=home>基礎理論</p>
       <dl>
