lab.html, reserch.htmlを更新

--- a/lab.html
+++ b/lab.html
@@ -86,6 +86,13 @@
 国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．
 <p> 
 	
+2023/9/23　D1 竝河伴裕さんが「<a href="http://www.mi.u-tokyo.ac.jp/contest2023.html">東京大学 数理・データサイエンスコンソーシアム　第６回データサイエンスコンテスト</a>」にて、最優秀賞を受賞しました。<br>
+本学学生より編成された7チーム 23 名が、加盟企業から提供された実社会データを使い、 データ解析を行った結果の発表を行いました。<br>
+	最優秀賞:チーム「株式会社 a.s.ist」 テーマ「セールス魔人 アキナイター」<br>
+メンバー：塩谷佳介、林悠偉、竝河伴裕
+<p> 
+	
+	
  <p> <dt class=leftline>招待講演</dt>
 
 2024/5/16 「熊本大学　物理学セミナー」<br>
