--- a/research.html
+++ b/research.html
@@ -87,6 +87,7 @@
         <br />
 	久住太一　 風戸研究奨励会国際会議発表渡航助成，2024年4月<p>
 	久住太一　 Microscopy and Microanalysis 2024 Student Scholar Award<p>
+	竝河伴裕　東京大学 数理・データサイエンスコンソーシアム　第６回データサイエンスコンテスト 最優秀賞 2023年9月<p>
       唐木田亮　IBIS2015 学生最優秀プレゼンテーション賞<p>
       徳田悟　ImPACT未来開拓研究会 ベストポスター賞<p>
       徳田悟　2015年度物性若手夏の学校 分科会最優秀発表者 (分野A)<p>
