岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -56,6 +56,14 @@
               
 </div>
 <div class="article">
+<h3>学歴</h3>
+1989年4月 - 1991年3月　大阪大学大学院基礎工学研究科後期博士課程<br>
+1985年4月 - 1987年3月　大阪大学大学院理学研究科前期博士課程<br>
+1985年3月　　　　　　　大阪市立大学理学部物理学科卒<br>
+1980年3月　　　　　　　大阪府立吹田東高等学校・普通科卒業 		
+</div>
+
+<div class="article">
 <h3>経歴</h3>
 2004年 - 現在　　東京大学 大学院新領域創成科学研究科 教授 <br>
 2001年 - 2004年　理化学研究所 脳数理研究チーム 副チームリーダー <br>
@@ -96,7 +104,13 @@
 					  
 
 <h4>2024(329～)</h4>
-<ol reversed start="335">
+<ol reversed start="336">
+
+<li> 
+Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
+"Quantitative Selection of Sample Structures in Small-Angle Scattering Using Bayesian Methods"<br>
+Journal of Applied Crystallography, in press (2024)
+</li>
 
 <li> 
 Atsushi Machida, Kenji Nagata, Ryo Murakami, Hiroshi Shinotsuka, Hayaru Shouno, Hideki Yoshikawa and Masato Okada<br>
