岡田先生のページ、lab.html,home.htmlを修正

--- a/lab.html
+++ b/lab.html
@@ -77,7 +77,7 @@
 				<p><a href="pdf/R&D.pdf">データ駆動科学と企業R&D組織のフラット化</a><a class="anchor" id="news4"></a>
 					<p><a href="pdf/2024jobmobility.pdf">データ駆動科学と人材の流動化</a><a class="anchor" id="news4"></a>
 			
-        <h3><em>News</em></h3>
+<!--        <h3><em>News</em></h3>
 		 <p> <dt class=leftline>新着情報</dt>
 2024/4/19　D1 久住太一さんが「<a href="https://www.kazato.org/application/grant_program.html">風戸研究奨励会国際会議発表渡航助成</a>」に採択されました。<br>電子顕微鏡並びに関連装置の研究・開発及び電子顕微鏡並びに関連装置を用いた研究（医学，生物学，物理学，化学，材料学，ナノテクノロジー，その他）に携っている研究者を対象とした渡航助成．最大50万円の助成が与えられる．
 <p> 
@@ -90,7 +90,7 @@
 本学学生より編成された7チーム 23 名が、加盟企業から提供された実社会データを使い、 データ解析を行った結果の発表を行いました。<br>
 	最優秀賞:チーム「株式会社 a.s.ist」 テーマ「セールス魔人 アキナイター」<br>
 メンバー：塩谷佳介、林悠偉、竝河伴裕
-<p> 
+<p> -->
 	
 	
  <p> <dt class=leftline>招待講演</dt>
