--- a/okada/index.html
+++ b/okada/index.html
@@ -57,7 +57,7 @@
 </div>
 <div class="article">
 <h3>学歴</h3>
-1989年4月 - 1991年3月　大阪大学大学院基礎工学研究科後期博士課程<br>
+1989年4月 - 1991年3月　大阪大学大学院基礎工学研究科後期博士課程中退<br>
 1985年4月 - 1987年3月　大阪大学大学院理学研究科前期博士課程<br>
 1985年3月　　　　　　　大阪市立大学理学部物理学科卒<br>
 1980年3月　　　　　　　大阪府立吹田東高等学校・普通科卒業 		
