--- a/home.html
+++ b/home.html
@@ -97,13 +97,28 @@
     <div class="section content">
       <h2>新着情報</h2>
       <ul class="infos">
-		           <li class="info">
+		  		<li class="info">
+        <span class="date">2024/6/6</span> <br>
+		Title:<a href="https://arxiv.org/abs/2406.02869">Mesoscopic Bayesian Inference by Solvable Models</a><br>
+		Author: Shun Katakami, Shuhei Kashiwamura, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
+		をarXivにアップロードしました。<p>
+		近年、ベイズ推論を計測科学に適用したベイズ計測が急速に発展しており、比熱と磁化率の統合、メスバウアー分光、NMRなどに活発に適用されている。しかしながら、数値計算に基づく応用研究が進むにつれ、データ解析結果の解釈が難しいケースが多く存在することが明らかになった。これはベイズ計測の解析理論の大半が観測点数N無限の極限を取り扱っており、観測点数Nが有限の場合の理論が存在しないためである。本稿では、この困難を乗り越えるため観測点数N有限の状況を定量的に説明する解析的理論を展開する。この新しい理論により、実データ解析の解釈が容易になることが期待される。
+        </li><p>
+		  </p>
+		  
+		<li class="info">
         <span class="date">2024/4/19</span> D1 久住太一さんが「<a href="https://www.kazato.org/application/grant_program.html">風戸研究奨励会国際会議発表渡航助成</a>」に採択されました。<br>電子顕微鏡並びに関連装置の研究・開発及び電子顕微鏡並びに関連装置を用いた研究（医学，生物学，物理学，化学，材料学，ナノテクノロジー，その他）に携っている研究者を対象とした渡航助成．最大50万円の助成が与えられる．
         </li><p>
 		  </p>
          <li class="info">
         <span class="date">2024/4/15</span> D1 久住太一さんが「<a href="https://mmconference.microscopy.org/">Microscopy and Microanalysis 2024</a>」Student Scholar Awardを受賞いたしました。<br>
         国際学会Microscopy and Microanalysisに応募した学生の中から少数名が選ばれる．2024年は200名以上の応募があった．受賞者には最大$1,000の参加費援助が与えられる．</li>
+		   </p>
+		 <li class="info">
+        <span class="date">2023/9/23　</span> D1 竝河伴裕さんが「<a href="http://www.mi.u-tokyo.ac.jp/contest2023.html">東京大学 数理・データサイエンスコンソーシアム　第６回データサイエンスコンテスト</a>」にて、最優秀賞を受賞しました。<br>
+本学学生より編成された7チーム 23 名が、加盟企業から提供された実社会データを使い、 データ解析を行った結果の発表を行いました。<br>
+	最優秀賞:チーム「株式会社 a.s.ist」 テーマ「セールス魔人 アキナイター」<br>
+メンバー：塩谷佳介、林悠偉、竝河伴裕</li>
       <!-- <li class="info">
           <span class="date">2018年6月1日</span>
           <span class="abst">第2回入試説明会</span>
