lab.htmlを更新、PDFを追加

--- a/lab.html
+++ b/lab.html
@@ -95,6 +95,10 @@
 	
  <p> <dt class=leftline>招待講演</dt>
 
+2024/6/10  「<a href="http://phys.iina.kumamoto-u.ac.jp/reds/index.html"target="_blank" rel="noopener noreferrer">データ駆動科学シンポジウム「ベイズ計測の最前線」</a>」<br>
+基調講演1「<a href="pdf/2024240610_kumamoto_okada.pdf">ベイズ計測の基礎から展開へ」（岡田　真人、東京大学）</a>」<br>
+招待講演2「<a href="pdf/20240610_kumamoto_katakami.pdf">ベイズ計測の理論的洞察と展望」（片上　舜、東京大学）</a>」<p>
+
 2024/5/16 「熊本大学　物理学セミナー」<br>
 岡田真人　「<a href="pdf/20240516_kumamotouniv.pdf">物理学とデータ駆動科学:ベイズ計測を中心に</a>」<p>
 		  
