--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -109,7 +109,8 @@
       2022 Oct.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　入学<br>
       2024 Mar.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　修士課程　修了<br>
       2024 Apr.&emsp;東京大学大学院新領域創成科学研究科　複雑理工学専攻　博士課程　入学<br>
-      2024 Apr.&emsp;東京大学「グリーントランスフォーメーションを先導する高度人材育成」プロジェクト（SPRING GX）
+      2024 Apr.&emsp;東京大学「グリーントランスフォーメーションを先導する高度人材育成（SPRING GX）」プロジェクト（BOOST NAISに移行）<br>
+      2024 Apr.&emsp;東京大学「次世代知能社会を先導する高度AI人材育成（BOOST NAIS）」プロジェクト
     </section>
 
     <hr>
@@ -119,11 +120,12 @@
       </header>
       <ol reversed>
         <li>
-          <b><u>T, Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, T. Mullarkey, J. M. Bekkevold,
+          <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, T. Mullarkey, J. M. Bekkevold,
           J. J. P. Peters, L. Jones, N. Shibata, M. Okada,
-          "New Poisson denoising method for pulse-count STEM imaging," Ultramicroscopy, 2024, 113996.
+          "New Poisson denoising method for pulse-count STEM imaging," Ultramicroscopy, <b>264</b>, 2024,
+          113996.
           <a href="https://doi.org/10.1016/j.ultramic.2024.113996"
-            target="_blank">https://doi.org/10.1016/j.ultramic.2024.113996</a>
+            target="_blank">https://doi.org/10.1016/j.ultramic.2024.113996</a><sup>NEW</sup>
         </li>
         <li>
           <b><u>T. Kusumi</u></b>, S. Katakami, R. Ishikawa, K. Kawahara, N. Shibata, M. Okada,
